upgrade kafka compose, init topics from env variable

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@
 KAFKA_VERSION=7.5.1
 REPLICATION_FACTOR=1
 PARTITIONS=2
+INIT_TOPICS=topic1,topic2,topic3
 
 # Zookeeper Configuration
 ZOOKEEPER_CLIENT_PORT=2181
@@ -40,5 +41,5 @@ KAFKA_UI_PORT=8089
 KAFKA_UI_METRIC_PORT=9101
 KAFKA_UI_READONLY=false
 KAFKA_UI_AUTH_TYPE=LOGIN_FORM
-KAFKA_UI_SPRING_SECURITY_USER_NAME=kafkaui
-KAFKA_UI_SPRING_SECURITY_USER_PASSWORD=password@2023
+KAFKA_UI_SPRING_SECURITY_USER_NAME=admin
+KAFKA_UI_SPRING_SECURITY_USER_PASSWORD=admin
