--- a/docker-compose-kafka-cluster-ksqldb.yml
+++ b/docker-compose-kafka-cluster-ksqldb.yml
@@ -1,8 +1,5 @@
 version: "3.8"
 services:
-  ####################
-  # zookeeper
-  ####################
   zookeeper:
     image: confluentinc/cp-zookeeper:${KAFKA_VERSION}
     hostname: zookeeper
@@ -20,9 +17,6 @@ services:
       - $PWD/kafka-volume/zk/data:/var/lib/zookeeper/data
       - $PWD/kafka-volume/zk/txn-logs:/var/lib/zookeeper/log
     restart: always
-  ####################
-  # broker
-  ####################
   broker:
     image: confluentinc/cp-kafka:${KAFKA_VERSION}
     hostname: broker
@@ -57,46 +51,40 @@ services:
     volumes:
       - $PWD/kafka-volume/broker/data:/var/lib/kafka/data
     restart: always
-  ####################
-  # broker2
-  ####################
-#  broker2:
-#    image: confluentinc/cp-kafka:${KAFKA_VERSION}
-#    hostname: broker2
-#    container_name: broker2
-#    depends_on:
-#      - zookeeper
-#      - broker
-#    networks:
-#      - backend
-#    ports:
-#      - ${BROKER2_EXTERNAL_PORT}:${BROKER2_EXTERNAL_PORT}
-#      - ${BROKER2_LOCAL_PORT}:${BROKER2_LOCAL_PORT}
-#      - ${BROKER2_JMX_PORT}:9101
-#    environment:
-#      KAFKA_BROKER_ID: 2
-#      KAFKA_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_CLIENT_PORT}
-#      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-#      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker2:${BROKER2_INTERNAL_PORT},PLAINTEXT_HOST://localhost:${BROKER2_LOCAL_PORT}
-#      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
-#      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 1000
-#      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
-#      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
-#      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: ${REPLICATION_FACTOR}
-#      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
-#      KAFKA_JMX_PORT: 9101
-#      KAFKA_JMX_HOSTNAME: broker2
-#      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:${SCHEMA_REGISTRY_PORT}
-#      KAFKA_LOG4J_ROOT_LOGLEVEL: WARN
-#      KAFKA_TOOLS_LOG4J_LOGLEVEL: ERROR
-#      KAFKA_LOG_RETENTION_MS: -1
-#      KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=WARN,org.apache.kafka=WARN,kafka=WARN,kafka.cluster=WARN,kafka.controller=WARN,kafka.coordinator=WARN,kafka.log=WARN,kafka.server=WARN,kafka.zookeeper=WARN,state.change.logger=WARN
-#    volumes:
-#      - $PWD/kafka-volume/broker2/data:/var/lib/kafka/data
-#    restart: always
-  ####################
-  # schema-registry
-  ####################
+  broker2:
+    image: confluentinc/cp-kafka:${KAFKA_VERSION}
+    hostname: broker2
+    container_name: broker2
+    depends_on:
+      - zookeeper
+      - broker
+    networks:
+      - backend
+    ports:
+      - ${BROKER2_EXTERNAL_PORT}:${BROKER2_EXTERNAL_PORT}
+      - ${BROKER2_LOCAL_PORT}:${BROKER2_LOCAL_PORT}
+      - ${BROKER2_JMX_PORT}:9101
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_CLIENT_PORT}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker2:${BROKER2_INTERNAL_PORT},PLAINTEXT_HOST://localhost:${BROKER2_LOCAL_PORT}
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 1000
+      KAFKA_CONFLUENT_LICENSE_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
+      KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: ${REPLICATION_FACTOR}
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: ${REPLICATION_FACTOR}
+      KAFKA_JMX_PORT: 9101
+      KAFKA_JMX_HOSTNAME: broker2
+      KAFKA_CONFLUENT_SCHEMA_REGISTRY_URL: http://schema-registry:${SCHEMA_REGISTRY_PORT}
+      KAFKA_LOG4J_ROOT_LOGLEVEL: WARN
+      KAFKA_TOOLS_LOG4J_LOGLEVEL: ERROR
+      KAFKA_LOG_RETENTION_MS: -1
+      KAFKA_LOG4J_LOGGERS: org.apache.zookeeper=WARN,org.apache.kafka=WARN,kafka=WARN,kafka.cluster=WARN,kafka.controller=WARN,kafka.coordinator=WARN,kafka.log=WARN,kafka.server=WARN,kafka.zookeeper=WARN,state.change.logger=WARN
+    volumes:
+      - $PWD/kafka-volume/broker2/data:/var/lib/kafka/data
+    restart: always
   schema-registry:
     image: confluentinc/cp-schema-registry:${KAFKA_VERSION}
     hostname: schema-registry
@@ -117,9 +105,6 @@ services:
     volumes:
       - $PWD/kafka-volume/schema-registry/data:/data
     restart: always
-  ####################
-  # connect
-  ####################
   connect:
     image: confluentinc/cp-kafka-connect:${KAFKA_VERSION}
     hostname: connect
@@ -161,9 +146,6 @@ services:
       - $PWD/kafka-volume/connect/plugins:/usr/share/confluent-hub-components
       - $PWD/kafka-volume/connect/data:/data
     restart: always
-  ####################
-  # ksqldb-server
-  ####################
   ksqldb-server:
     image: confluentinc/cp-ksqldb-server:${KAFKA_VERSION}
     hostname: ksqldb-server
@@ -192,9 +174,6 @@ services:
       KSQL_LOG4J_ROOT_LOGLEVEL: WARN
       KSQL_TOOLS_LOG4J_LOGLEVEL: ERROR
     restart: always
-  ####################
-  # ksqldb-cli
-  ####################
   ksqldb-cli:
     image: confluentinc/cp-ksqldb-cli:${KAFKA_VERSION}
     hostname: ksqldb-cli
@@ -233,9 +212,6 @@ services:
       KAFKA_REST_LOG4J_ROOT_LOGLEVEL: WARN
       KAFKA_REST_TOOLS_LOG4J_LOGLEVEL: ERROR
     restart: always
-  ####################
-  # kafka-ui
-  ####################
   kafka-ui:
     hostname: kafka-ui
     container_name: kafka-ui
@@ -262,9 +238,6 @@ services:
       SPRING_SECURITY_USER_NAME: ${KAFKA_UI_SPRING_SECURITY_USER_NAME}
       SPRING_SECURITY_USER_PASSWORD: ${KAFKA_UI_SPRING_SECURITY_USER_PASSWORD}
     restart: always
-  ####################
-  # init-kafka
-  ####################
   init-kafka:
     image: confluentinc/cp-kafka:${KAFKA_VERSION}
     container_name: init-kafka
@@ -276,11 +249,8 @@ services:
     networks:
       - backend
     entrypoint: [ '/bin/bash', '-c' ]
-    command: /bin/bash -c "./init.sh"
+    command: /bin/bash -c "./init_topics.sh"
 
-################################################################################
-# networks
-################################################################################
 networks:
   backend:
     name: backend
